--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,7 +38,7 @@ footer .wrap{
 }
 header {
     width: 100%;
-    box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.979);
+    /*box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.979);*/
     background: rgb(0,36,132);
     float: left;
 }
@@ -53,69 +53,58 @@ header .logotip h1 {
     color: white;
     padding: 47px 0px 35px 10px;
 }
-div .wrap2 {
-    float:left;
-    margin: 100%;
-    box-shadow: 2px 0px 5px rgba(0,0,0,0.3);
-    background: rgb(0,36,149);
+/*Subencabezado*/
+.wrap2 {
+    width: 100%;
+    /*box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.979);*/
+    background: rgb(0,36,132);
+    float: left;
 }
-.section2 {
-    font-size: 28px;
+div .subtitulo{
     float:left;
-    color: white;
-    background: rgb(0,36,149);
-    padding: 9px 119px;
-
+    font-size: 35px;
+    padding: 15px 0px 15px 50px;
+    color:white;
+    margin-left: 45px;
+    margin-right: 20px;
 }
-.menu{
+div .menu {
     float:right;
-    background: rgb(0,36,149);
-    padding: 0px 0px 0px 45.8px;
-
-
 }
-.menu a {
-    display: inline-block;
-    margin-left: 2.7px;
+.menu a{
+    display:inline-block;
     text-decoration: none;
-    font-weight: 600;
-    font-size: 18px;
-    color: white;
-    padding: 24.7px 11.4px;
+    font-weight: 500;
+    font-size:20px;
+    color:white;
     position: relative;
-
+    padding: 15px 15px 20px 15px;
+    margin-top: 15px;
 }
-
-.menu a::after{
+.menu a::after {
     content: '';
     display: block;
     position: absolute;
-    bottom:20px;
-    width: 0%;/*mismo ancho del padre a*/
+    bottom: 10px;
+    width: 0%;
     height: 3px;
     background: white;
 }
-.menu a:hover::after{
-    width: 87%;
+.menu a:hover::after {
+    width: 85%;
     transition: width 0.5s;
 }
-
-.menu a:hover{
-    background: rgb(0,36,149);
+.menu a:hover {
+    background: rgb(79, 243, 42);
 }
+/*Banner con imagen del rector*/
 .banner {
-    background-color:rgb(255, 204, 0);
+    background-color:rgb(79, 243, 42);
+    /*background-color:rgb(36,196,1);*/
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 50px;
     clear: both;/*baja la parte del banner que estaba en el titulo a abajpo*/
 }
-.wrap2 {
-    background-color:rgb(0,36,149);
-}
 
-.menu a:hover{
-    background: rgb(0,36,190);
-
-}
 
