--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,7 +34,7 @@ footer .wrap{
 
 .wrap2 {
     width: 100%;
-    margin: auto
+    margin: auto;
 }
 header {
     width: 100%;
@@ -57,7 +57,7 @@ header .logotip h1 {
 .wrap2 {
     width: 100%;
     /*box-shadow: 2px 0px 5px rgba(255, 255, 255, 0.979);*/
-    background: rgb(0,36,132);
+    background: #242424;/*rgb(0,36,132);*/
     float: left;
     overflow: hidden;
 }
@@ -76,7 +76,7 @@ div .menu {
     display:inline-block;
     text-decoration: none;
     font-weight: 500;
-    font-size:20px;
+    font-size:18px;
     color:white;
     position: relative;
     padding: 15px 15px 20px 15px;
@@ -94,13 +94,16 @@ div .menu {
 .menu a:hover::after {
     width: 85%;
     transition: width 0.3s;
+    background: white;
 }
 .menu a:hover {
-    background:#93D002; /*rgb(0,247,0);*/
+    border: 5px solid white;
+    border-color:/*#93D002*/white; 
+    border-radius: 50px;
 }
 /*Banner con imagen del rector*/
 .banner {
-    background-color:#93D002; 
+    background-color:rgb(0,36,132);
     /*background-color:rgb(36,196,1);*/
     background-repeat: no-repeat;
     background-size: cover;
@@ -137,7 +140,7 @@ div .menu {
     width: 220px;
     height: 50px;
     border-radius: 10px;
-    background: rgb(0,36,190);
+    background: rgb(0,36,132);
     font-weight: 600;
     padding: 12px;
     text-decoration: none;
@@ -146,7 +149,8 @@ div .menu {
     margin-top: 18px;
 }
 .banner .banner-wrap a:hover{
-    background:#93D002;
+    background:rgb(0,36,132);
+    border-radius: 8px;
 }
 .links  img{
     left:75px;
