--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,8 +81,8 @@ div .menu {
     font-size:20px;
     color:white;
     position: relative;
-    padding: 15px 15px 20px 15px;
-    margin-top: 15px;
+    padding: 5px 10px 10px 15px;
+    margin-top: 30px;
 }
 .menu a::after {
     content: '';
@@ -90,7 +90,7 @@ div .menu {
     position: absolute;
     bottom: 10px;
     width: 0%;
-    height: 3px;
+    height: 2px;
     background: white;
 }
 .menu a:hover::after {
@@ -99,9 +99,9 @@ div .menu {
     background: white;
 }
 .menu a:hover {
-    border: 3px solid white;
+    border: 2px solid white;
     border-color:/*#93D002*/white; 
-    border-radius: 50px;
+    border-radius: 40px;
 }
 /*Banner con imagen del rector*/
 .banner {
@@ -109,8 +109,8 @@ div .menu {
     /*background-color:rgb(36,196,1);*/
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 50px;
-    height: 550px;
+    border-bottom: 20px solid #242424;
+    height: 600px;
     clear: both;/*baja la parte del banner que estaba en el titulo a abajo*/
 }
 .banner .banner-wrap {
@@ -175,7 +175,7 @@ p .content-plataforma{
     position: relative;
     left: 800px;
     top:-500px;
-    border-radius: 8px;
+    border-radius: 12px;
     border: 0px;
 }
 
@@ -208,7 +208,7 @@ ul,ol {
     cursor: pointer;
 
 }
-.left {
+.left1 {
     position: absolute;
 }
 /*modificar selectores de flecha*/
@@ -220,7 +220,6 @@ ul,ol {
     align-items: center;
     color: rgb(0,36,132);;
     font-size: 50px;
-
     cursor: pointer;
 }
 .left1 {
@@ -229,5 +228,14 @@ ul,ol {
 }
 .right1 {
     right:10px;
-
+}
+div .Articulos_blog {
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+    background: #242424;
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    top: 10px;
 }
