--- a/Formularios-Sign-in-catedraticos/css/signin.css
+++ b/Formularios-Sign-in-catedraticos/css/signin.css
@@ -20,6 +20,7 @@ body {
   padding: 15px;
   margin: auto;
   background-color: rgb(0,36,132);
+  opacity: 0.9;
   border-radius: 8px;
   font-family: 'K2D', sans-serif;
   color: white; 
