--- a/Pag Principal/css/estilos.css
+++ b/Pag Principal/css/estilos.css
@@ -86,7 +86,7 @@ header{
     .navegacion nav {
         position: absolute;
         left: -100%;
-        width: 200px;
+        width: 250px;
         height: 100%;
         background: #393939;
     }
@@ -94,4 +94,28 @@ header{
         display: block;
     }
      
+}
+
+/*para el Footer*/
+footer .wrap{
+    color: white;
+    background-color:rgb(0,36,132);
+    text-shadow: none;
+    height: 400px;
+}
+.logo {
+   width: 250px;
+   height: 150px;
+}
+.logounah{
+   margin-left: 38%;
+   margin-right: 40%;
+}
+.logopie {
+   width: 100%;
+   height: 150px;
+}
+
+.parrafo-pie{
+    text-align: center;
 }
