--- a/Pag Principal/css/estilos.css
+++ b/Pag Principal/css/estilos.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
+    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -119,4 +127,147 @@ footer .wrap{
 
 .parrafo-pie{
     text-align: center;
+}
+
+/*====================Para el slider======================*/
+
+.flexslider {
+    width:100%;
+    max-width: 1280px;
+    top:2px;
+    margin: auto;
+    border: 5px solid rgb(0,36,132);
+    border-radius: 8px;
+    box-shadow: 0px 0px 30px 0ox rgba(0,0,0,0.70);
+    display: flex;
+    flex-direction: column;
+    position:relative;
+}
+
+.slides,
+.slides li,
+.slides li img {
+    width: 100%;
+}
+.slides li {
+    margin-bottom: -16px;
+}
+
+/*paginacion*/
+.flex-control-nav.flex-control-paging {
+    width: 120px;
+    padding:  8px;
+    background: rgb(0,36,132);
+    border: 2px solid rgba(255,255,255,0.3); 
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    border-radius: 10px;
+    list-style: none;
+    position: absolute;
+    bottom: -15px;
+    z-index: 3;
+}
+
+.flex-control-nav li {
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.flex-control-nav li a {
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: white;
+    border-radius: 50%;
+    text-indent: -9999px;
+    box-shadow: inset 0px -3px 2px 0px rgba(0,0,0,0.6);
+}
+
+.flex-control-nav li a.flex-active {
+    background: #FFCC00;
+}
+/*next y previus para navegacion*/
+.flex-direction-nav {
+    
+    z-index: 3;
+    list-style: none;
+}
+
+.flex-direction-nav a{
+    width: 60px;
+    height: 60px;
+    margin-bottom: 5px;
+    background: #FFCC00;
+    border: 2px solid rgba(255,255,255,0.3);
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.8);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    margin-top: -30px;
+
+    transition:  all 0.4 ease-in-out;
+}
+.flex-direction-nav a::before {
+    content: "\f104";
+    font: normal normal normal 14px/1 FontAwesome; 
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
+    font-size: 50px;
+    color: rgb(0,36,132);
+}
+.flex-direction-nav a.flex-next::before {
+    content: "\f105";
+}
+.flex-direction-nav .flex-prev {
+    left: 0px;
+    
+}
+.flex-direction-nav .flex-next{
+    right: 0px;
+     
+}
+.flexslider:hover .flex-direction-nav .flex-prev{
+    opacity: 1;
+    left: 10px;
+}
+.flexslider:hover .flex-direction-nav .flex-next{
+    opacity: 1;
+    right: 10px;
+}
+/*Responsive ============= Slider*/
+@media screen and (max-width: 800px){
+    .flex-direction-nav a{
+        opacity: 1;
+    }
+    .flex-direction-nav .flex-prev {
+        left: 10px;
+
+    }
+    .flex-direction-nav .flex-next{
+        right: 10px;
+    }
+
+}
+@media screen and (max-width: 600px){
+    .flexslider{
+        width: 100%;
+        border-radius: 0px;
+        border: none;
+    }
+    .slides li {
+        overflow: hidden;
+    }
+    .slides li img {
+        width: 600px;
+    }
+    .flex-direction-nav a{
+        top:auto;
+    }
 }
