--- a/Formulario-Facultades/css/estilos.css
+++ b/Formulario-Facultades/css/estilos.css
@@ -20,12 +20,12 @@
     width: 120px;
     height: 40px;
     background: #003399;
-    border: 2px  solid white;
+    border: 1px  solid white;
     border-radius: 10px;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
-    padding: 0.5px;
+    padding: 0.9px;
 }
 
 .encabezado a:hover {
