--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,6 +23,10 @@ nav li a{
     /*background-color: #e7e7e7;*/
 }
 
+.bg-primary {
+    background-color: #007bff!important;
+}
+
 .boton-menu{
     display: none;
 }
