--- a/Formularios-Coordinadores/css/estilos.css
+++ b/Formularios-Coordinadores/css/estilos.css
@@ -3,14 +3,16 @@ body {
   height: 100%;
 }
 
-body {
+.loggin {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color:#222222;
+  background-repeat:no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
 .form-signin {
