--- a/Libreria/css/estilos.css
+++ b/Libreria/css/estilos.css
@@ -289,7 +289,8 @@ footer .wrap{
       font-size: 50px;
     }
   }
-  
+  .btn-outline-success{color: white; background-color:rgb(0,36,132); border-color: rgb(0,36,132);} 
+  .btn-outline-success:hover {color: #fff; background-color:#FFCC00; border-color:#FFCC00;}
   @media (min-width: 62em) {
     .featurette-heading {
       margin-top: 7rem;
