--- a/Formularios-Administracion/css/modificaciones.css
+++ b/Formularios-Administracion/css/modificaciones.css
@@ -23,7 +23,7 @@ main {
         rgba(0, 36, 132, 0.6) 30%, 
         
            rgba(0, 0, 0, 0.6) 99%);*/
-           background-color: /*rgb(237, 247, 250);*/#127CBD;
+           background-color: /*rgb(237, 247, 250);*/rgba(0,0,0,0.7);
     color: #fff;
     margin-top: 0;
     overflow: auto;
@@ -116,4 +116,68 @@ footer{
         width: 100%;
 }
  
+}
+
+/*MENSAJE USER AND PASSWORD*/
+.modal_wrap{
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0,0.7);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mensaje_modal{
+    background: #fff;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
+    width: 400px;
+    padding: 30px 20px 15px;
+}
+
+.mensaje_modal h3{
+    text-align: center;
+    font-family: 'Ubuntu';
+	font-size: 20px;
+	font-weight: 400;
+}
+
+.mensaje_modal h3:after{
+    content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #C5C5C5;
+	margin: 10px 0px 15px;
+}
+
+.mensaje_modal p{
+    font-size: 16px;
+    color: #606060;
+}
+
+.mensaje_modal p:before{
+    content: "\f00d";
+    font-family: FontAwesome;
+    display: inline-block;
+    color: #E25151;
+    margin-right: 8px;
+}
+#btnClose{
+    display: inline-block;
+	padding: 3px 10px;
+	margin-top: 10px;
+
+	background: #E25151;
+	color: #fff;
+	border: 2px solid #B14141;
+	cursor: pointer;
+
+	float: right;
 }
