--- a/Libreria/css/estilos.css
+++ b/Libreria/css/estilos.css
@@ -16,7 +16,9 @@ body{
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
-
+.page-footer{
+    background-color: #fff;
+}
 .social-icon a{
     color: #fff;
     text-decoration: none;
